5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1764_762.log
== TEST (2019-05-24 22:47:17) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:47:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + '-' + mes_abrev + '-' + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:48:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]

print(dia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:49:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]

print(dia)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:49:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]

print(dia)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:50:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + "de" + mes_abrev + "de" + ano
print(nova_data)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:50:57) 
-- CODE:
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[3:5])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + 'de' + mes_abrev + 'de' + ano
print(nova_data)
-- OUTPUT:
26deNovde1982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:51:26) 
-- CODE:
nome_meses = 'JanFevMarAbrMaiJunJulAgoSetOutNovDez'
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
nova_data = str(dia) + 'de' + mes_abrev + 'de' + ano
print(nova_data)
-- OUTPUT:
26deNovde1982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:52:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
print(str(dia),mes_abrev,ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:54:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]
# Indices do fatiamento
ini = 3 * (mes - 1)
fim = ini + 3
# Mes abreviado
mes_abrev = nome_meses[ini : fim]
print(str(dia),nome_meses[0],ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:54:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:54:56) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

print(mes)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:56:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = mes[0]
elif(mes == 2):
	a = mes[1]
print(str(dia),a,ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:56:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = mes[1]
elif(mes == 2):
	a = mes[1]
print(str(dia),a,ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:57:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = mes[1]
elif(mes == 2):
	a = mes[2]
print(str(dia),a,ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:57:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	
elif(mes == 2):
	a = mes[2]
print(str(dia),mes[0],ano)
-- ERROR:
File "XXXX", line 11
    elif(mes == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:58:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	print(str(dia),mes[0],ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:58:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
nome_meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]


print(str(dia),nome_meses[0],ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:27:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = meses[0]
elif(mes == 2):
	a = meses[1]


print(str(dia),a,ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:27:44) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = meses[0]
elif(mes == 2):
	a = meses[1]


print(str(dia),"de",a,"de",ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:28:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = meses[0]
elif(mes == 2):
	a = meses[1]
elif(mes == 3):
	a = meses[2]
elif(mes == 4):
	a = meses[3]
elif(mes == 5):
	a = meses[4]
elif(mes == 6):
	a = meses[5]
elif(mes == 7):
	a = meses[6]
elif(mes == 8):
	a = meses[7]
elif(mes == 9):
	a = meses[8]
elif(mes == 10):
	a = meses[9]
elif(mes == 11):
	a = meses[10]
elif(mes == 12):
	a = meses[11]


print(str(dia),"de",a,"de",ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:29:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = meses[0]
elif(mes == 2):
	a = meses[1]
elif(mes == 3):
	a = meses[2]
elif(mes == 4):
	a = meses[3]
elif(mes == 5):
	a = meses[4]
elif(mes == 6):
	a = meses[5]
elif(mes == 7):
	a = meses[6]
elif(mes == 8):
	a = meses[7]
elif(mes == 9):
	a = meses[8]
elif(mes == 10):
	a = meses[9]
elif(mes == 11):
	a = meses[10]
elif(mes == 12):
	a = meses[11]


print(str(dia),"de",a,"de",ano)

-- EXECUTION TIME:
0.595975
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:30:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
meses = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = meses[0]
elif(mes == 2):
	a = meses[1]
elif(mes == 3):
	a = meses[2]
elif(mes == 4):
	a = meses[3]
elif(mes == 5):
	a = meses[4]
elif(mes == 6):
	a = meses[5]
elif(mes == 7):
	a = meses[6]
elif(mes == 8):
	a = meses[7]
elif(mes == 9):
	a = meses[8]
elif(mes == 10):
	a = meses[9]
elif(mes == 11):
	a = meses[10]
elif(mes == 12):
	a = meses[11]


print(str(dia),"de",a,"de",ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:32:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = vet_mes[0]
elif(mes == 2):
	a = vet_mes[1]
elif(mes == 3):
	a = vet_mes[2]
elif(mes == 4):
	a = vet_mes[3]
elif(mes == 5):
	a = vet_mes[4]
elif(mes == 6):
	a = vet_mes[5]
elif(mes == 7):
	a = vet_mes[6]
elif(mes == 8):
	a = vet_mes[7]
elif(mes == 9):
	a = vet_mes[8]
elif(mes == 10):
	a = vet_mes[9]
elif(mes == 11):
	a = vet_mes[10]
elif(mes == 12):
	a = vet_mes[11]


print(str(dia),"de",a,"de",ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 23:33:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = vet_mes[0]
elif(mes == 2):
	a = vet_mes[1]
elif(mes == 3):
	a = vet_mes[2]
elif(mes == 4):
	a = vet_mes[3]
elif(mes == 5):
	a = vet_mes[4]
elif(mes == 6):
	a = vet_mes[5]
elif(mes == 7):
	a = vet_mes[6]
elif(mes == 8):
	a = vet_mes[7]
elif(mes == 9):
	a = vet_mes[8]
elif(mes == 10):
	a = vet_mes[9]
elif(mes == 11):
	a = vet_mes[10]
elif(mes == 12):
	a = vet_mes[11]


print(dia,"de",a,"de",ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:33:19) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = vet_mes[0]
elif(mes == 2):
	a = vet_mes[1]
elif(mes == 3):
	a = vet_mes[2]
elif(mes == 4):
	a = vet_mes[3]
elif(mes == 5):
	a = vet_mes[4]
elif(mes == 6):
	a = vet_mes[5]
elif(mes == 7):
	a = vet_mes[6]
elif(mes == 8):
	a = vet_mes[7]
elif(mes == 9):
	a = vet_mes[8]
elif(mes == 10):
	a = vet_mes[9]
elif(mes == 11):
	a = vet_mes[10]
elif(mes == 12):
	a = vet_mes[11]


print(dia,"de",a,"de",ano)

-- EXECUTION TIME:
0.431054
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:35:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input('Informe a data (dd/mm/aaaa): ')
dia = int(data[:2])
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = vet_mes[0]
elif(mes == 2):
	a = vet_mes[1]
elif(mes == 3):
	a = vet_mes[2]
elif(mes == 4):
	a = vet_mes[3]
elif(mes == 5):
	a = vet_mes[4]
elif(mes == 6):
	a = vet_mes[5]
elif(mes == 7):
	a = vet_mes[6]
elif(mes == 8):
	a = vet_mes[7]
elif(mes == 9):
	a = vet_mes[8]
elif(mes == 10):
	a = vet_mes[9]
elif(mes == 11):
	a = vet_mes[10]
elif(mes == 12):
	a = vet_mes[11]


print(dia,"de",a,"de",ano)

-- EXECUTION TIME:
0.410251
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 23:35:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("Informe a data (dd/mm/aaaa): ")
dia = data[:2]
mes = int(data[2:4])
ano = data[-4:]

if(mes == 1):
	a = vet_mes[0]
elif(mes == 2):
	a = vet_mes[1]
elif(mes == 3):
	a = vet_mes[2]
elif(mes == 4):
	a = vet_mes[3]
elif(mes == 5):
	a = vet_mes[4]
elif(mes == 6):
	a = vet_mes[5]
elif(mes == 7):
	a = vet_mes[6]
elif(mes == 8):
	a = vet_mes[7]
elif(mes == 9):
	a = vet_mes[8]
elif(mes == 10):
	a = vet_mes[9]
elif(mes == 11):
	a = vet_mes[10]
elif(mes == 12):
	a = vet_mes[11]


print(dia,"de",a,"de",ano)

-- EXECUTION TIME:
0.604132
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
